--- a/BancoPichincha/banco_pichincha_backend/package.json
+++ b/BancoPichincha/banco_pichincha_backend/package.json
@@ -17,11 +17,12 @@
   "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "express": "^4.22.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.1.11"
   }
 }
