--- a/BancoPichincha/banco_pichincha_backend/package.json
+++ b/BancoPichincha/banco_pichincha_backend/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.22.1",
+    "node-cron": "^3.0.3",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
